--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Logs
 logs
 *.log
@@ -58,7 +57,6 @@ typings/
 # dotenv environment variables file
 .env
 
-=======
 .DS_Store
 node_modules/
 dist/
@@ -71,4 +69,4 @@ yarn-error.log
 *.ntvs*
 *.njsproj
 *.sln
->>>>>>> :sparkles: Initial commit
+*.swp
